--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: test_app
+name: virtual_fitting_room
 description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -14,6 +14,7 @@ dependencies:
 
   english_words: ^4.0.0
   provider: ^6.1.2
+  image_picker: ^0.8.5+3 #this is for image use
 
 dev_dependencies:
   flutter_test:
