--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.1.2
   image_picker: ^0.8.5+3 #this is for image use
+  share_plus:
 
 dev_dependencies:
   flutter_test:
