Updated Contact Screen
Added text to contact screen and edited the pubspec.yaml and AndroidManifest.xml to allow for internet access and url launching

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:label="virtual_fitting_room"
         android:name="${applicationName}"
