--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   provider: ^6.1.2
   image_picker: ^1.1.2 #this is for image use
   url_launcher: ^6.0.12 #for url launching
-
+  tflite_flutter: ^0.11.0 #tflite for ML model
 dev_dependencies:
   flutter_test:
     sdk: flutter
