--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,7 +24,8 @@ android {
         applicationId = "com.example.virtual_fitting_room"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
+        //minSdk = flutter.minSdkVersion
+        minSdkVersion 30
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
