--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,11 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.1.2
   image_picker: ^0.8.5+3 #this is for image use
+  url_launcher: ^6.0.12 #for url launching
+  tflite_flutter: ^0.11.0 #tflite for ML model
+  image: ^3.0.8
+  share_plus:
+  camera:
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +29,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+  - assets/VFRmodel.tflite #model integration
+  - assets/MerianBrothersTuxWeddingParty.jpg #image use for contact screen
